fixed spacing overflow on char gen screen

--- a/src/app/characters/character-generator/character-generator.component.css
+++ b/src/app/characters/character-generator/character-generator.component.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-wrap: wrap;
     margin-left: 10%;
-    height: 800px;
+    height: 950px;
     flex-flow: column wrap;
     justify-content: flex-start;
     align-items: flex-start;
